<resources>
    <string name="app_name">Sport center</string>
    <string name="new_order_title">Новая заявка</string>
    <string name="logout_menu_title">Выход из аккаунта</string>
    <string name="logout_dialog_title">Выход</string>
    <string name="logout_dialog_message">Вы уверены?</string>
    <string name="logout_dialog_ok">Да</string>
    <string name="logout_dialog_cancel">Нет</string>
    <string name="order_change_color">Изменить цвет</string>
    <string name="order_delete">Удалить</string>
    <string name="order_delete_message">Удалить?</string>
    <string name="order_delete_cancel">Нет</string>
    <string name="order_delete_ok">Да</string>
    <string name="service_item_hint">Индивидуальная тренировка, с тренером, аренда зала</string>
    <string name="age_hint">Возраст (например, \'7-18+\' </string>
    <string name="persons_number_hint">Кол-во тренирующихся</string>
    <string name="comment_hint">Дополнительная информация</string>
    <string name="fio_hint">ФИО</string>
    <string name="phone_hint">Телефон</string>
    <string name="email_hint">e-mail</string>
    <string name="call_for_info_tint">Перезвонить для уточнения информации</string>
    <string name="calendar_button_text">Выберите дату</string>
    <string name="order_exit_message">Сохранить изменения заказа?</string>
    <string name="order_exit_title">Выход</string>
    <string name="interval_button_text">Выберите время</string>
    <string name="interval_choose_attention">Сначала выберите дату</string>
    <string name="picker_date_title">Выберите дату записи</string>
    <string name="init_intervals_title">Обновить расписание</string>
    <string name="check_booking_problem1">Сохранили заказ без проверки и бронирования.</string>
    <string name="check_booking_problem2">Не выбрана дата записи. Заказ сохранен без бронирования.</string>
    <string name="check_booking_problem3">Не выбран интервал записи. Заказ сохранен без бронирования.</string>
    <string name="check_booking_problem4">Не заполнена длительность оказания услуги. Заказ не сохранен</string>
    <string name="check_booking_ok">Забронировано.</string>
    <string name="check_booking_problem5">Не удалось прочитать свободные интервалы:</string>
    <string name="check_booking_not_enouph_part1">Доступно только количество:</string>
    <string name="check_booking_not_enouph_part2">для услуги:</string>
    <string name="check_booking_not_enouph_part3">. А требуется:</string>
    <string name="check_booking_not_possible_part1">Недоступен интервал:</string>
    <string name="check_booking_not_possible_part2">для бронирования</string>
    <string name="no_registration1">Нет регистрации в сервисе. Если регистрации не будет позже, документ не запишется</string>
    <string name="free_of_services">свободно</string>
    <string name="exit_menu_title">Выход из приложения</string>
</resources>
