<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/order_change_color"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/palette"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/order_change_color"
        app:showAsAction="ifRoom|collapseActionView"
        android:visible="false"/>


    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/order_delete"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/init_intervals"
        android:icon="@drawable/ic_storage_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/init_intervals_title"
        app:showAsAction="collapseActionView" />

</menu>